
New right mouse menu entry 'Copy selected rows to new window' available in all tables.
  If windows with with matching column names and column types already exist another pop up menu allows to append
  the selected rows to one of these windows.

#412 Provided Command Line Interface (CLI).
  See Readme.txt in the squirrelcli/ subdirectory of your SQuirreL installation.


Bug fixes:

Corrections/abbreviations dialog didn't scroll right when new row was added.

DBCopy-Plugin: When 'Paste table as/filtered...' was used before simple 'Paste table' information of the first action were not cleaned.

Reloading last SQL contents (*) did mark the SQL editor dirty i.e. unsaved buffer edits confirm firm was triggered.
  (*) See See menu File --> Global Preferences --> Tab SQL --> Section General --> Check box 'Reload last SQL editor contents when Session is opened'

Close confirmations now also work for extra SQL Worksheets (ctrl N).

'New Session Properties' --> tab SQL was not initially scrolled to top.

#1341 Squirrel was started twice by squirrel-sql.bat in the plain zip versions of snapshot-20180406_0118.

Added new alternative to fix MAC OS launch script problem with setting SQUIRREL_SQL_HOME.
  Thanks to Frank Kemmer

CSV export --> Corrected line separator. This bug was lately introduced with feature #438.

'Find column'-button now also available when result was moved to own window.

MAC launch scripts: Added double quotes to the definition of the IZPACK_JAVA_HOME variable
  as requested by Pete K. in bug #1321

#1337 Version check dialog told Java 8 was needed for version 3.x instead of 3.8.1

#740 The 'Copy as INSERT-VALUES/UPDATE-SET statement' functions generate 'PressCtrlH' instead of table name.
  This problem is not generally solvable. Improvements were implemented to provide a table name in more occasions.
  Note: PressCtrlH is meant to be a hint to use the editor's replace function to correct a generated script.
